--- a/TaskMan/app/src/main/AndroidManifest.xml
+++ b/TaskMan/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
 
         <activity
             android:name=".SplashScreen"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,6 +32,11 @@
             android:exported="false">
 
         </activity>
+        <activity
+            android:name="com.example.taskman.CompletedTasksActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/Theme.TaskMan.CompletedTasks" />
     </application>
 
 </manifest>
