#about and support
the layout altered and about and support sections added

--- a/TaskMan/app/src/main/AndroidManifest.xml
+++ b/TaskMan/app/src/main/AndroidManifest.xml
@@ -14,8 +14,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.TaskMan"
-
         tools:targetApi="31">
+        <activity
+            android:name=".About"
+            android:exported="false"
+            android:parentActivityName=".MainActivity"/>
+
         <receiver android:name=".ReminderBroadcastReceiver" />
 
         <activity
@@ -28,12 +32,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:exported="false">
 
-        </activity>
+            android:name=".MainActivity"
+            android:exported="false"></activity>
         <activity
-            android:name="com.example.taskman.CompletedTasksActivity"
+            android:name=".CompletedTasksActivity"
             android:exported="false"
             android:parentActivityName=".MainActivity"
             android:theme="@style/Theme.TaskMan.CompletedTasks" />
